--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -119,6 +119,7 @@
 
     <!-- Favorites -->
     <LinearLayout
+        android:id="@+id/favorites"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
